Fix c notice close button color in Twenty Twenty One dark mode (https://github.com/woocommerce/woocommerce-blocks/pull/3472)

--- a/plugins/woocommerce-blocks/assets/js/base/components/store-notices-container/style.scss
+++ b/plugins/woocommerce-blocks/assets/js/base/components/store-notices-container/style.scss
@@ -11,9 +11,9 @@
 			margin: 0 0 0 auto;
 			border: 0;
 			outline: 0;
-			color: #fff;
+			color: currentColor;
 			svg {
-				fill: #fff;
+				fill: currentColor;
 				vertical-align: text-top;
 			}
 		}
